--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <img src="logo.png" alt="logo" height="60px" width="60px">
             <div class="leftpartTop">
                 <ul>
-                    <li><a href="#"><i class="fas fa-home" style="color:white"></i></i></a></li>
-                    <li><i class="fas fa-bars" style="color:white"></i></a></li>
+                    <li><a href="#"><i class="fas fa-home" style="color:white"></i></a></li>
+                    <li><a href="#"><i class="fas fa-bars" style="color:white"></i></a></li>
                     <li><a href="#"><i class="fas fa-calendar-day"style="color:white" ></i></a></li>
-                    <li><i class="fas fa-images" style="color:white"></i></a></li>
+                    <li><a href="#"><i class="fas fa-images" style="color:white"></i></a></li>
                     <li><a href="#"><i class="fas fa-desktop" style="color:white"></i></a></li>
                 </ul>
             </div>
