--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
     <!-- left part -->
        <div class="leftPart">
         <div class="leftpart-1">
-            <img src="logo.png" alt="logo" height="60px" width="60px">
+            <img class="logo" src="logo.png" alt="logo" height="60px" width="60px">
             <div class="leftpartTop">
-                <ul>
+                <ul class="topli">
                     <li><a href="#"><i class="fas fa-home" style="color:white"></i></a></li>
                     <li><a href="#"><i class="fas fa-bars" style="color:white"></i></a></li>
-                    <li><a href="#"><i class="fas fa-calendar-day"style="color:white" ></i></a></li>
+                    <li><a href="#"><i class="fas fa-calendar-day"style="color:white"></i></a></li>
                     <li><a href="#"><i class="fas fa-images" style="color:white"></i></a></li>
                     <li><a href="#"><i class="fas fa-desktop" style="color:white"></i></a></li>
                 </ul>
             </div>
             <div class="leftpartBottom">
-                <ul>
+                <ul class="bottomli">
                     <li><a href="#"><i class="fas fa-cog" style="color:white"></i></a></li>
                     <li><a href="#"><i class="far fa-bell" style="color:white"></i></a></li>
                     <li><a href="#"><i class="fas fa-desktop" style="color:white"></i></a></li>
